add critical point submission v2

--- a/notebooks/data/data-cleaning.ipynb
+++ b/notebooks/data/data-cleaning.ipynb
@@ -77,7 +77,7 @@
     "ANGLEZ_VARIANCE_SEQUENCE_LENGTH = 6 * 60 * 12 # 8h\n",
     "ANGLEZ_REPETITION_SEQUENCE_LENGTH = 4 * 60 * 12 # 4h\n",
     "\n",
-    "CLEAN_BUFFER = 3 * 60 * 12 # 3h"
+    "CLEAN_BUFFER = 0 * 60 * 12 # 3h"
    ]
   },
   {
@@ -458,8 +458,8 @@
       "Step 275 of 277\n",
       "Step 276 of 277\n",
       "Step 277 of 277\n",
-      "CPU times: total: 57min 9s\n",
-      "Wall time: 35min 8s\n"
+      "CPU times: total: 1h 1min 13s\n",
+      "Wall time: 42min 55s\n"
      ]
     }
    ],
@@ -490,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(90193150, 9)\n"
+      "(94436069, 10)\n"
      ]
     }
    ],
@@ -517,7 +517,7 @@
      "output_type": "stream",
      "text": [
       "Serien ohne Events: \n",
-      " ['c7b1283bb7eb', '0f9e60a8e56d', 'a3e59c2ce3f6', '89c7daa72eee', 'c5d08fc3e040', 'e11b9d69f856', '390b487231ce', '2fc653ca75c7']\n"
+      " ['a3e59c2ce3f6', 'c5d08fc3e040', '0f9e60a8e56d', '390b487231ce', 'c7b1283bb7eb', '2fc653ca75c7', 'e11b9d69f856', '89c7daa72eee']\n"
      ]
     }
    ],
@@ -560,7 +560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(89544144, 9)\n",
+      "(93442547, 10)\n",
       "(14154, 6)\n"
      ]
     }
