--- a/notebooks/data/data-merge.ipynb
+++ b/notebooks/data/data-merge.ipynb
@@ -74,16 +74,25 @@
    "outputs": [],
    "source": [
     "def get_critical_point_label(series, events):\n",
-    "    series['critical_event_point'] = 0.0\n",
+    "    series['onset_critical_event_point'] = 0.0\n",
+    "    series['wakeup_critical_event_point'] = 0.0\n",
     "    gaussian_distribution = generate_gaussian_distribution()\n",
     "    \n",
-    "    for row in events.iterrows():\n",
+    "    for row in events[events.event == 'onset'].iterrows():\n",
     "        current_step = row[1].step\n",
     "    \n",
     "        min_step = int(current_step - (720/2))\n",
     "        max_step = min(int(current_step + (720/2)), len(series) - 1)\n",
     "           \n",
-    "        series.loc[min_step:max_step, 'critical_event_point'] = gaussian_distribution[:(max_step-min_step) + 1]\n",
+    "        series.loc[min_step:max_step, 'onset_critical_event_point'] = gaussian_distribution[:(max_step-min_step) + 1]\n",
+    "    \n",
+    "    for row in events[events.event == 'wakeup'].iterrows():\n",
+    "        current_step = row[1].step\n",
+    "    \n",
+    "        min_step = int(current_step - (720/2))\n",
+    "        max_step = min(int(current_step + (720/2)), len(series) - 1)\n",
+    "           \n",
+    "        series.loc[min_step:max_step, 'wakeup_critical_event_point'] = gaussian_distribution[:(max_step-min_step) + 1]\n",
     "    \n",
     "    return series\n",
     "\n",
@@ -416,8 +425,8 @@
       "Step 275 of 277 (fbf33b1a2c10)\n",
       "Step 276 of 277 (fcca183903b7)\n",
       "Step 277 of 277 (fe90110788d2)\n",
-      "CPU times: total: 1min 51s\n",
-      "Wall time: 2min 19s\n"
+      "CPU times: total: 2min 2s\n",
+      "Wall time: 2min 50s\n"
      ]
     }
    ],
@@ -472,7 +481,8 @@
        "      <th>enmo</th>\n",
        "      <th>num_series_id</th>\n",
        "      <th>awake</th>\n",
-       "      <th>critical_event_point</th>\n",
+       "      <th>onset_critical_event_point</th>\n",
+       "      <th>wakeup_critical_event_point</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -486,6 +496,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -496,6 +507,7 @@
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -508,6 +520,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -519,6 +532,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -529,6 +543,7 @@
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -543,12 +558,19 @@
        "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213   \n",
        "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215   \n",
        "\n",
-       "   num_series_id  awake  critical_event_point  \n",
-       "0              1      1                   0.0  \n",
-       "1              1      1                   0.0  \n",
-       "2              1      1                   0.0  \n",
-       "3              1      1                   0.0  \n",
-       "4              1      1                   0.0  "
+       "   num_series_id  awake  onset_critical_event_point  \\\n",
+       "0              1      1                         0.0   \n",
+       "1              1      1                         0.0   \n",
+       "2              1      1                         0.0   \n",
+       "3              1      1                         0.0   \n",
+       "4              1      1                         0.0   \n",
+       "\n",
+       "   wakeup_critical_event_point  \n",
+       "0                          0.0  \n",
+       "1                          0.0  \n",
+       "2                          0.0  \n",
+       "3                          0.0  \n",
+       "4                          0.0  "
       ]
      },
      "execution_count": 7,
