--- a/notebooks/data/feature-engineering-lags-transformer-4h-window.ipynb
+++ b/notebooks/data/feature-engineering-lags-transformer-4h-window.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c30219bf",
    "metadata": {
     "ExecuteTime": {
@@ -31,7 +31,10 @@
     "import torch\n",
     "import gc\n",
     "\n",
-    "pd.set_option('display.max_columns', None)"
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "324a560c",
    "metadata": {
     "ExecuteTime": {
@@ -54,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "IS_TRAINING = True\n",
+    "IS_TRAINING = False\n",
     "if IS_TRAINING:\n",
     "    FILE = '../../data/processed/train_series_split_normalized.parquet'\n",
     "else:\n",
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3100987e",
    "metadata": {},
    "outputs": [],
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a775cf39",
    "metadata": {},
    "outputs": [],
@@ -95,10 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3fa6384c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "239"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(FEATURES)"
    ]
@@ -113,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "25844b7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "folder = \"train/\" if IS_TRAINING else \"validation/\"\n",
-    "file_path_prefix = \"../../data/processed/transformer-downsample/\" + folder\n",
+    "file_path_prefix = \"../../data/processed/transformer-downsample-v2/\" + folder\n",
     "\n",
     "def save_chunk(num_series_id, chunk):\n",
     "    series_length, series_columns = chunk[FEATURES].values.shape\n",
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "02687bb5",
    "metadata": {},
    "outputs": [],
@@ -144,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5f7819507cd29d98",
    "metadata": {
     "ExecuteTime": {
@@ -183,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "16b52907",
    "metadata": {},
    "outputs": [],
@@ -195,7 +209,7 @@
     "        chunk = make_features_chunk(num_series_id)\n",
     "        save_chunk(num_series_id, chunk)\n",
     "        overview_data.append(\n",
-    "            chunk[['num_series_id', 'step', 'awake', 'critical_event_point']].reset_index().rename(columns={'index':'series_index'}).copy()[['num_series_id', 'step', 'awake', 'critical_event_point', 'series_index']]\n",
+    "            chunk[['num_series_id', 'step', 'awake', 'onset_critical_event_point', 'wakeup_critical_event_point']].reset_index().rename(columns={'index':'series_index'}).copy()[['num_series_id', 'step', 'awake', 'onset_critical_event_point', 'wakeup_critical_event_point', 'series_index']]\n",
     "        )\n",
     "    \n",
     "        del chunk\n",
@@ -206,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c0d067155defaebc",
    "metadata": {
     "ExecuteTime": {
@@ -215,7 +229,29 @@
     "is_executing": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [06:21<00:00,  7.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Engineering took 381.85620307922363 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "overview = make_features(series)\n",
@@ -232,12 +268,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9d108c48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_series_id</th>\n",
+       "      <th>step</th>\n",
+       "      <th>awake</th>\n",
+       "      <th>onset_critical_event_point</th>\n",
+       "      <th>wakeup_critical_event_point</th>\n",
+       "      <th>series_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1434339</th>\n",
+       "      <td>276</td>\n",
+       "      <td>620581</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1434340</th>\n",
+       "      <td>276</td>\n",
+       "      <td>620593</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1434341</th>\n",
+       "      <td>276</td>\n",
+       "      <td>620605</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1434342</th>\n",
+       "      <td>276</td>\n",
+       "      <td>620617</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1434343</th>\n",
+       "      <td>276</td>\n",
+       "      <td>620629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50639</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1434344 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         num_series_id    step  awake  onset_critical_event_point  \\\n",
+       "0                    7       0      1                         0.0   \n",
+       "1                    7      12      1                         0.0   \n",
+       "2                    7      24      1                         0.0   \n",
+       "3                    7      36      1                         0.0   \n",
+       "4                    7      48      1                         0.0   \n",
+       "...                ...     ...    ...                         ...   \n",
+       "1434339            276  620581      1                         0.0   \n",
+       "1434340            276  620593      1                         0.0   \n",
+       "1434341            276  620605      1                         0.0   \n",
+       "1434342            276  620617      1                         0.0   \n",
+       "1434343            276  620629      1                         0.0   \n",
+       "\n",
+       "         wakeup_critical_event_point  series_index  \n",
+       "0                                0.0             0  \n",
+       "1                                0.0             1  \n",
+       "2                                0.0             2  \n",
+       "3                                0.0             3  \n",
+       "4                                0.0             4  \n",
+       "...                              ...           ...  \n",
+       "1434339                          0.0         50635  \n",
+       "1434340                          0.0         50636  \n",
+       "1434341                          0.0         50637  \n",
+       "1434342                          0.0         50638  \n",
+       "1434343                          0.0         50639  \n",
+       "\n",
+       "[1434344 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b9e548d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "overview"
+    "overview.to_parquet(file_path_prefix + \"overview.parquet\")"
    ]
   }
  ],
